--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SnakeXaml"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" KeyDown="Window_KeyDown">
     <Grid>
+        <TextBlock x:Name="NumberOfMealsTextBlock" 
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Center"
+                   FontSize="120"
+                   FontWeight="Bold"
+                   Foreground="Gray"
+                   Text="0"
+                   Visibility="Visible"/>
         
+        <Grid x:Name="ArenaGrid">
+
+        </Grid>
+
     </Grid>
 </Window>
