--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,18 +6,22 @@
         xmlns:local="clr-namespace:SnakeXaml"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="500" KeyDown="Window_KeyDown">
+        Title="MainWindow" 
+        Height="500" Width="500" 
+        KeyDown="Window_KeyDown">
+
     <Grid x:Name="MainGrid">
-        <TextBlock x:Name="NumberOfMealsTextBlock" 
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center"
-                   FontSize="120"
-                   FontWeight="Bold"
-                   Foreground="Gray"
-                   Text="0"
-                   Visibility="Visible"/>
-        
-        <Grid x:Name="ArenaGrid"/>
+            <TextBlock x:Name="NumberOfMealsTextBlock" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center"
+                       FontSize="120"
+                       FontWeight="Bold"
+                       Foreground="Gray"
+                       Text="0"
+                       Visibility="Visible"/>
+
+            <Grid x:Name="ArenaGrid"/>
 
         </Grid>
+   
 </Window>
